--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ static_cell = { version = "2", features = ["nightly"]}
 # serde-json-core = "0.5.1"
 
 stm32h7 = {version = "0.15.1", features = ["stm32h743v", "rt"]}
-cortex-m-rt = {version = "0.7.4", features = ["device", "zero-init-ram"]}
+cortex-m-rt = {version = "0.7.3", features = ["device"]}
 cortex-m = { version = "0.7.7", features = ["cm7", "inline-asm", "critical-section-single-core"] }
 panic-halt = "0.2.0"
 
